exo + standard + travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,13 @@ script: ./tester
 language: node_js
 node_js:
   - "node"
+branches:
+  only:
+    - dev
+    - master
+jobs:
+  include:
+    - stage: style
+      script: npm run lint
+    - stage: test
+      script: npm run test
