--- a/package.json
+++ b/package.json
@@ -4,55 +4,101 @@
   "tests": [
     {
       "name": "primitives",
-      "tags": [ "basics", "declaration" ]
+      "tags": [
+        "basics",
+        "declaration"
+      ]
     },
     {
       "name": "escape-str",
-      "tags": [ "str", "declaration" ]
+      "tags": [
+        "str",
+        "declaration"
+      ]
     },
     {
       "name": "arr",
-      "tags": [ "basics", "declaration" ]
+      "tags": [
+        "basics",
+        "declaration"
+      ]
     },
     {
       "name": "obj",
-      "tags": [ "basics", "declaration" ]
+      "tags": [
+        "basics",
+        "declaration"
+      ]
     },
     {
       "name": "circular",
-      "tags": [ "advanced", "declaration" ]
+      "tags": [
+        "advanced",
+        "declaration"
+      ]
     },
     {
       "name": "id",
-      "tags": [ "basics", "declaration", "function" ]
+      "tags": [
+        "basics",
+        "declaration",
+        "function"
+      ]
     },
     {
       "name": "get-length",
-      "tags": [ "get", "gets", "function" ]
+      "tags": [
+        "get",
+        "gets",
+        "function"
+      ]
     },
     {
       "name": "get-first",
-      "tags": [ "get", "gets", "function" ]
+      "tags": [
+        "get",
+        "gets",
+        "function"
+      ]
     },
     {
       "name": "get-last",
-      "tags": [ "get", "gets", "function" ]
+      "tags": [
+        "get",
+        "gets",
+        "function"
+      ]
     },
     {
       "name": "concat-str",
-      "tags": [ "str", "function", "opperator" ]
+      "tags": [
+        "str",
+        "function",
+        "opperator"
+      ]
     },
     {
       "name": "get",
-      "tags": [ "get", "gets", "function" ]
+      "tags": [
+        "get",
+        "gets",
+        "function"
+      ]
     },
     {
       "name": "is-positive",
-      "tags": [ "math", "function" ]
+      "tags": [
+        "math",
+        "function"
+      ]
     },
     {
       "name": "add",
-      "tags": [ "math", "opperator", "function" ]
+      "tags": [
+        "math",
+        "opperator",
+        "function"
+      ]
     },
     {
       "name": "sub",
@@ -80,39 +126,70 @@
     },
     {
       "name": "repeat",
-      "tags": [ "str" ]
+      "tags": [
+        "str"
+      ]
     },
     {
       "name": "sentence",
-      "tags": [ "str", "method" ]
+      "tags": [
+        "str",
+        "method"
+      ]
     },
     {
       "name": "words",
-      "tags": [ "str", "method" ]
+      "tags": [
+        "str",
+        "method"
+      ]
     },
     {
       "name": "yell",
-      "tags": [ "str", "tdd", "method" ]
+      "tags": [
+        "str",
+        "tdd",
+        "method"
+      ]
     },
     {
       "name": "whisper",
-      "tags": [ "str", "tdd", "method" ]
+      "tags": [
+        "str",
+        "tdd",
+        "method"
+      ]
     },
     {
       "name": "cut",
-      "tags": [ "str", "tdd", "method" ]
+      "tags": [
+        "str",
+        "tdd",
+        "method"
+      ]
     },
     {
       "name": "keep",
-      "tags": [ "str", "tdd", "method" ]
+      "tags": [
+        "str",
+        "tdd",
+        "method"
+      ]
     },
     {
       "name": "capitalize",
-      "tags": [ "str", "method" ]
+      "tags": [
+        "str",
+        "method"
+      ]
     },
     {
       "name": "jaden-case",
-      "tags": [ "advanced", "tdd", "method" ]
+      "tags": [
+        "advanced",
+        "tdd",
+        "method"
+      ]
     },
     {
       "name": "total",
@@ -124,11 +201,29 @@
     },
     {
       "name": "multiply-recursive",
-      "tags": [ "advanced", "recursion" ]
+      "tags": [
+        "advanced",
+        "recursion"
+      ]
     }
   ],
   "scripts": {
     "update": "git reset && git stash && git pull https://github.com/nan-ci/js.git master && git stash pop",
-    "test": "./tester"
+    "test": "echo 'no tests'",
+    "lint": "npm run lint:js && npm run lint:css && npm run lint:html",
+    "lint:js": "standard | snazzy",
+    "lint:css": "stylelint 'client/style/**/*.css'",
+    "lint:html": "htmllint 'client/**/*.html'",
+    "server": "nodemon server --ignore client",
+    "client": "http-server client"
+  },
+  "dependencies": {
+    "htmllint-cli": "0.0.7",
+    "http-server": "^0.11.1",
+    "nodemon": "^1.17.3",
+    "snazzy": "^7.1.1",
+    "standard": "^11.0.1",
+    "stylelint": "^9.2.0",
+    "stylelint-config-recommended": "^2.1.0"
   }
 }
